Add PR trigger to CI workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,11 @@ name: Build CI
 on:
   push:
     branches: [ master ]
-  
+  pull_request:
+    branches:
+      - master
+      - develop
+      - release/*
 
 jobs:
   build:
