--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,12 +3,14 @@
 
 name: Build CI
 
+env:
+  NODE_VERSION: 12.x
+
 on:
   push:
-    branches: [ master ]
+    branches: '*'
   pull_request:
     branches:
-      - master
       - develop
       - release/*
 
@@ -17,17 +19,13 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x]
-
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js ${{ env.NODE_VERSION }}
       uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm ci
+        node-version: ${{ env.NODE_VERSION }}
+    - run: npm install
     - run: npm run build --if-present
     - run: npm test
       env:
