--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,10 @@ on:
     - master
     - develop
     - release/*
+  pull_request:	
+    branches:
+    - develop
+    - release/*	
 
 jobs:
   build:
